...
    
    
    
     /// 編集と削除のスワイプをセット
    override func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        
        let edit = UIContextualAction(style: .normal, title: "編集") { [weak self] _,_,_  in
            self?.registerViewController = UINavigationController(rootViewController: RegisterViewController(mode: .edit, userModel: self?.usersModel?[indexPath.row]))
            self?.registerViewController?.presentationController?.delegate = self
            self?.present(self!.registerViewController!, animated: true)
        }
        edit.backgroundColor = .orange
        
...
